--- a/css/main.css
+++ b/css/main.css
@@ -29,17 +29,36 @@ main .tech h4 {
   font-size: 16px;
   font-weight: bold;
   text-transform: uppercase;
+  cursor: pointer;
 }
 
 main .tech h5 {
   margin-left: 17px;
   font-size: 18px;
+  cursor: pointer;
+}
+
+main .tech h4:hover {
+  color: #3bae6c;
+}
+
+main .tech h5:hover {
+  color: #3bae6c;
 }
 
 main .tech ul li {
   margin-left: 26px;
   margin-bottom: 3px;
   font-size: 14px;
+}
+
+main .tech ul li a {
+  display: block;
+  width: 100%;
+}
+
+main .tech ul li a:hover {
+  color: #3bae6c;
 }
 
 main .tech ul li .active {
@@ -56,8 +75,6 @@ main .inputs .row {
 
 main .inputs h5 {
   font-size: 18px;
-  /*margin-bottom: 0;*/
-  /*margin-top: 0;*/
   padding-left: 10px;
 }
 
@@ -73,7 +90,10 @@ main .inputs .choose-holder {
   padding: 0 10px;
 }
 
-
+.select-wrapper input.select-dropdown:hover {
+  border-bottom: 2px solid #3bae6c;
+  margin-bottom: 19px;
+}
 
 /*//////////////////////////////////////////*/
 
@@ -85,7 +105,6 @@ main .all-tech {
 
 main .articles-holder article {
   margin-top: 37px;
-  /*border: 1px solid #dbdbdb;*/
   display: flex;
   background-color: white;
   box-shadow: 0px 0px 6px 0px rgba(64, 64, 64, 0.4);
@@ -171,4 +190,9 @@ main .articles-holder article .about p {
   border: 0;
   border-radius: 4px;
   margin-left: 5px;
+}
+
+button:hover {
+  background-color: #00B036 !important;
+  box-shadow: inset 0px 0px 28px 0px rgba(0,128,54,1);
 }
