--- a/css/footer.css
+++ b/css/footer.css
@@ -10,6 +10,10 @@ footer a {
   font-size: 16px;
 }
 
+footer a:hover {
+  color: #3bae6c;
+}
+
 footer p {
   text-align: center;
   color: #636363;
