--- a/css/header.css
+++ b/css/header.css
@@ -72,16 +72,22 @@
 }
 
 .header .lang-wrapper {
-  width: 70px;
+  /*width: 70px;*/
+  text-align: center;
   padding-top: 35px;
   line-height: normal;
   margin: auto;
+}
+
+.header .indicator {
+  display: none !important;
 }
 
 .header .lang-wrapper a {
   color: #404040;
   text-transform: uppercase;
   font-size: 18px;
+  margin-right: 10px;
 }
 
 .header .lang-wrapper a:hover {
@@ -93,11 +99,12 @@
 }
 
 .header .tab-wrapper {
-  padding-top: 22px;
+  padding-top: 20px;
   margin-bottom: 15px;
 }
 
 .header .tab-wrapper .tabs .tab a {
+  margin-top: 2px;
   padding: 0 10px;
   font-size: 18px;
   font-weight: lighter;
@@ -106,10 +113,14 @@
 }
 
 .header .tab-wrapper .tabs .tab a:hover {
+  border-top: 2px solid #3bae6c;
+  margin-top: 0;
   color: #3bae6c;
 }
 
 .header .tab-wrapper .tabs .tab a.active {
+  border-top: 2px solid #3bae6c;
+  margin-top: 0;
   color: #3bae6c;
 }
 
