--- a/css/detailes.css
+++ b/css/detailes.css
@@ -155,7 +155,9 @@
   margin-left: 0;
   width: 100%;
   height: 45px;
-  border-bottom: 2px solid #008036;
+  border-radius: 3px;
+  background-color: #e5e5e5;
+        border-bottom: 2px solid #008036;
 }
 
 .detailes .about-us {
@@ -163,6 +165,12 @@
 }
 
 .detailes .tab-wrapper {
+
+    /*background-color: #e5e5e5 !important;*/
+    /*border-radius: 3px;*/
+      /*border-bottom: 2px solid #008036;*/
+      /*height: 45px;*/
+      /*z-index: 100;*/
   margin-top: 15px;
 }
 
@@ -234,7 +242,7 @@
   background-color: #008036;
   border-radius: 100%;
   font-size: 14px;
-  padding: 3px;
+  padding: 2px 4px;
 }
 
 
