--- a/css/header.css
+++ b/css/header.css
@@ -13,6 +13,18 @@
   }
 }
 
+@media only screen and (max-width: 1200px) {
+  .header .container {
+    min-width: 100%;
+  }
+
+  .header .container .row {
+    margin-left: 0px;
+    width: 100%;
+  }
+}
+
+
 .header .nav-wrapper {
   display: flex;
 }
