--- a/css/logo-list.css
+++ b/css/logo-list.css
@@ -77,8 +77,10 @@
 
 .link-holder {
   width: 200px;
-  margin-left: 25px;
-  margin-right: 25px;
+  height: 37px;
+  margin: auto;
+  /*margin-left: 25px;
+  margin-right: 25px;*/
 }
 
 .link-holder a {
@@ -144,7 +146,8 @@
 }
 #mixedSlider .MS-content .item a {
   float: right;
-  margin: 0 20px 0 0;
+  margin: auto;
+  /*margin: 0 20px 0 0;*/
   font-size: 16px;
   font-style: italic;
   color: rgba(173, 0, 0, 0.82);
