--- a/css/header.css
+++ b/css/header.css
@@ -13,6 +13,39 @@
   }
 }
 
+@media only screen and (max-width: 1024px) {
+  .burger {
+    display: block !important;
+  }
+
+  .top-nav {
+    display: none !important;
+  }
+
+  .header .phone-wrapper {
+    display: none;
+  }
+
+  .header .logo-container {
+    width: 33% !important;
+  }
+
+  .header .lang {
+    margin-left: 33% !important;
+    width: 33% !important;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .burger {
+    display: none !important;
+  }
+
+  .top-nav {
+    display: block !important;
+  }
+}
+
 @media only screen and (max-width: 1200px) {
   .header .container {
     min-width: 100%;
